test: 인증 부분을 Mock 방식으로 변경
기존에 실제 유저 정보를 가지고 인증 테스트를 한 부분을 Mock 방식으로 변경했음