@@ -1,26 +1,5 @@
 package jbnu.se.api.controller;
 
-import jbnu.se.api.config.JwtAdminRequestPostProcessor;
-import jbnu.se.api.config.JwtUserRequestPostProcessor;
-import jbnu.se.api.domain.Election;
-import jbnu.se.api.domain.ElectionType;
-import jbnu.se.api.domain.ElectoralRoll;
-import jbnu.se.api.domain.Period;
-import jbnu.se.api.repository.ElectionRepository;
-import jbnu.se.api.repository.ElectoralRollRepository;
-import jbnu.se.api.util.JwtUtils;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.http.MediaType;
-import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.test.web.servlet.MockMvc;
-
-import java.util.List;
-
 import static java.time.LocalDateTime.of;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.http.MediaType.MULTIPART_FORM_DATA;
@@ -30,15 +9,30 @@ import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import java.util.List;
+import jbnu.se.api.domain.Election;
+import jbnu.se.api.domain.ElectionType;
+import jbnu.se.api.domain.ElectoralRoll;
+import jbnu.se.api.domain.Period;
+import jbnu.se.api.repository.ElectionRepository;
+import jbnu.se.api.repository.ElectoralRollRepository;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.http.MediaType;
+import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.web.servlet.MockMvc;
+
 @SpringBootTest
 @AutoConfigureMockMvc
 class ElectoralRollControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
-
-    @Autowired
-    private JwtUtils jwtUtils;
 
     @Autowired
     private ElectoralRollRepository electoralRollRepository;
@@ -53,6 +47,7 @@ class ElectoralRollControllerTest {
     }
 
     @Test
+    @WithMockUser(username = "name")
     @DisplayName("선거인 명부 등록에는 관리자 권한이 있어야한다..")
     void registerElectoralRollRoleTest() throws Exception {
         // given
@@ -75,7 +70,6 @@ class ElectoralRollControllerTest {
 
         mockMvc.perform(multipart("/api/admin/electoralRoll")
                         .file(file)
-                        .with(JwtUserRequestPostProcessor.jwtUser(jwtUtils))
                         .param("electionId", String.valueOf(savedElection.getId()))
                 )
                 .andExpect(status().isForbidden())
@@ -83,6 +77,7 @@ class ElectoralRollControllerTest {
     }
 
     @Test
+    @WithMockUser(username = "name", roles = {"ADMIN"})
     @DisplayName("csv 파일의 헤더는 '학번', '이름' 이어야 한다.")
     void csvHeaderTest() throws Exception {
         // given
@@ -105,7 +100,6 @@ class ElectoralRollControllerTest {
 
         mockMvc.perform(multipart("/api/admin/electoralRoll")
                         .file(file)
-                        .with(JwtAdminRequestPostProcessor.jwtAdmin(jwtUtils))
                         .param("electionId", String.valueOf(savedElection.getId()))
                 )
                 .andExpect(status().isBadRequest())
@@ -115,6 +109,7 @@ class ElectoralRollControllerTest {
     }
 
     @Test
+    @WithMockUser(username = "name", roles = {"ADMIN"})
     @DisplayName("관리자는 선거인 명부를 정상적으로 등록한다.")
     void registerElectoralRollTest() throws Exception {
         // given
@@ -137,7 +132,6 @@ class ElectoralRollControllerTest {
 
         mockMvc.perform(multipart("/api/admin/electoralRoll")
                         .file(file)
-                        .with(JwtAdminRequestPostProcessor.jwtAdmin(jwtUtils))
                         .param("electionId", String.valueOf(savedElection.getId()))
                 )
                 .andExpect(status().isCreated())
@@ -145,12 +139,13 @@ class ElectoralRollControllerTest {
 
         List<ElectoralRoll> all = electoralRollRepository.findAll();
         assertThat(all).hasSize(1);
-        assertThat(all.get(0).getElection().getId()).isEqualTo(savedElection.getId());
-        assertThat(all.get(0).getMember().getStudentId()).isEqualTo("201911111");
-        assertThat(all.get(0).getMember().getName()).isEqualTo("name1");
+        assertThat(all.getFirst().getElection().getId()).isEqualTo(savedElection.getId());
+        assertThat(all.getFirst().getMember().getStudentId()).isEqualTo("201911111");
+        assertThat(all.getFirst().getMember().getName()).isEqualTo("name1");
     }
 
     @Test
+    @WithMockUser(username = "name", roles = {"ADMIN"})
     @DisplayName("파일은 null이 될 수 없다.")
     void fileNullValidateTest() throws Exception {
         // given
@@ -166,7 +161,6 @@ class ElectoralRollControllerTest {
         // expected
         mockMvc.perform(post("/api/admin/electoralRoll")
                         .contentType(MULTIPART_FORM_DATA)
-                        .with(JwtAdminRequestPostProcessor.jwtAdmin(jwtUtils))
                         .param("electionId", String.valueOf(savedElection.getId()))
                 )
                 .andExpect(status().isBadRequest())
@@ -176,6 +170,7 @@ class ElectoralRollControllerTest {
     }
 
     @Test
+    @WithMockUser(username = "name", roles = {"ADMIN"})
     @DisplayName("csv 파일만 업로드 할 수 있다.")
     void csvValidateTest() throws Exception {
         // given
@@ -198,7 +193,6 @@ class ElectoralRollControllerTest {
 
         mockMvc.perform(multipart("/api/admin/electoralRoll")
                         .file(file)
-                        .with(JwtAdminRequestPostProcessor.jwtAdmin(jwtUtils))
                         .param("electionId", String.valueOf(savedElection.getId()))
                 )
                 .andExpect(status().isBadRequest())
