@@ -1,24 +1,5 @@
 package jbnu.se.api.controller;
 
-import jbnu.se.api.config.JwtAdminRequestPostProcessor;
-import jbnu.se.api.config.JwtUserRequestPostProcessor;
-import jbnu.se.api.domain.Headquarter;
-import jbnu.se.api.domain.Pledge;
-import jbnu.se.api.repository.HeadquarterRepository;
-import jbnu.se.api.repository.PledgeRepository;
-import jbnu.se.api.util.JwtUtils;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.http.MediaType;
-import org.springframework.mock.web.MockMultipartFile;
-import org.springframework.test.web.servlet.MockMvc;
-
-import java.util.List;
-
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.http.MediaType.MULTIPART_FORM_DATA_VALUE;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.multipart;
@@ -27,15 +8,28 @@ import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import java.util.List;
+import jbnu.se.api.domain.Headquarter;
+import jbnu.se.api.domain.Pledge;
+import jbnu.se.api.repository.HeadquarterRepository;
+import jbnu.se.api.repository.PledgeRepository;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.http.MediaType;
+import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.web.servlet.MockMvc;
+
 @SpringBootTest
 @AutoConfigureMockMvc
 class PledgeControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
-
-    @Autowired
-    private JwtUtils jwtUtils;
 
     @Autowired
     private PledgeRepository pledgeRepository;
@@ -50,6 +44,7 @@ class PledgeControllerTest {
     }
 
     @Test
+    @WithMockUser(username = "name")
     @DisplayName("공약 등록에는 관리자 권한이 있어야 한다.")
     void registerPledgeRoleTest() throws Exception {
         // given
@@ -61,7 +56,6 @@ class PledgeControllerTest {
         Headquarter savedHeadquarter = headquarterRepository.save(headquarter);
 
         mockMvc.perform(post("/api/admin/pledges")
-                        .with(JwtUserRequestPostProcessor.jwtUser(jwtUtils))
                         .contentType(MULTIPART_FORM_DATA_VALUE)
                         .param("description", "test")
                         .param("headquarterId", String.valueOf(savedHeadquarter.getId()))
@@ -71,6 +65,7 @@ class PledgeControllerTest {
     }
 
     @Test
+    @WithMockUser(username = "name", roles = {"ADMIN"})
     @DisplayName("관리자는 공약을 선본에 등록할 수 있다.")
     void registerPledgeTest() throws Exception {
         // given
@@ -83,7 +78,6 @@ class PledgeControllerTest {
 
         // expected
         mockMvc.perform(post("/api/admin/pledges")
-                        .with(JwtAdminRequestPostProcessor.jwtAdmin(jwtUtils))
                         .contentType(MULTIPART_FORM_DATA_VALUE)
                         .param("description", "test")
                         .param("headquarterId", String.valueOf(savedHeadquarter.getId()))
@@ -93,15 +87,15 @@ class PledgeControllerTest {
 
         List<Pledge> all = pledgeRepository.findAll();
         assertThat(all).hasSize(1);
-        assertThat(all.get(0).getDescription()).isEqualTo("test");
+        assertThat(all.getFirst().getDescription()).isEqualTo("test");
     }
 
     @Test
+    @WithMockUser(username = "name", roles = {"ADMIN"})
     @DisplayName("공약 등록 요청시 선본 id가 있어야 한다.")
     void registerPledgeValidationTest() throws Exception {
         // expected
         mockMvc.perform(post("/api/admin/pledges")
-                        .with(JwtAdminRequestPostProcessor.jwtAdmin(jwtUtils))
                         .contentType(MULTIPART_FORM_DATA_VALUE)
                         .param("description", "test")
                 )
@@ -112,6 +106,7 @@ class PledgeControllerTest {
     }
 
     @Test
+    @WithMockUser(username = "name", roles = {"ADMIN"})
     @DisplayName("공약 등록 요청시 이미지는 null 이거나 이미지 파일이어야 한다.")
     void imageValidationTest() throws Exception {
         // given
@@ -134,7 +129,6 @@ class PledgeControllerTest {
                         .file("imageFile", file.getBytes())
                         .param("description", "test")
                         .param("headquarterId", String.valueOf(savedHeadquarter.getId()))
-                        .with(JwtAdminRequestPostProcessor.jwtAdmin(jwtUtils))
                         .contentType(MediaType.MULTIPART_FORM_DATA)
                 )
                 .andExpect(status().isBadRequest())
